Log-Stuctured Merge-Tree Impl Pt 2

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ highlighter: rouge
 
 paginate: 20
 baseurl: "/"
-url: "patrickgombert.com"
+url: "https://patrickgombert.com"
 
 permalink:       /:year/:title/
 
